# income_and_expense

./: README.md  pyproject.toml
config/: settings.py  urls.py
expenses/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_alter_expense_options_alter_expense_amount_and_more.py
incomes/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
incomes/migrations/: 0001_initial.py  0002_alter_income_options_alter_income_user.py  0003_alter_income_options_alter_income_amount_and_more.py
incomes/templates/incomes/: income_confirm_delete.html  income_detail.html  income_form.html  income_list.html
incomes/templatetags/: tags.py
main/: forms.py  mixins.py  models.py  serializers.py  urls.py  views.py
main/templates/main/: base.html  chart.html  home.html  operation_confirm_delete.html  operation_detail.html  operation_form.html  operation_list.html
main/templates/main/includes/: inc_menu.html
static/css/: dashboard.css
users/: admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
users/management/commands/: clear_admin_log.py
users/migrations/: 0001_initial.py
users/templates/users/: home.html  login.html  register.html
